<resources>
    <string name="app_name">My_Application</string>
    <string name="ac">AC</string>
    <string name="del">DEL</string>
    <string name="percent">%</string>
    <string name="division">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">x</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="subtraction">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="addition">+</string>
    <string name="swap">SWAP</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="input">INPUT</string>
    <string name="output">OUTPUT</string>
    <string name="information">\n\nKalkulator\n\nArkadiusz Krupiński\n\nAby rozpocząć kliknij ROZPOCZNIJ</string>
    <string name="launchButtonAdvanced">Kalkulator zaawansowany</string>
    <string name="exit">Wyjdź z programu</string>

    <string name="oppositeValue">+/-</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="e">e</string>
    <string name="exp">x^y</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="tan">tan</string>

    <string name="launchButtonSimple">Kalkulator prosty</string>
    <string name="launchInfo">Informacje</string>

</resources>
